# claude-runner

./: .env.example  .gitignore  .taplo.toml  CLAUDE.md  Dockerfile  README.md  package.json  pyproject.toml  wake.py
.claude/skills/: documentation_writer.md
.claude/skills/readme-writer/: SKILL.md
.claude/skills/readme-writer/references/: anti-slop-engine.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: delivery.yml  quality.yml
.husky/: pre-commit
assets/: claude-runner-ascii.txt
scripts/: check-correspondence.sh  check-self-schedule.sh  extract-log-entry.py  memory_compact.py  memory_search.py  mood-capture.py  mood-lexicon.json  process-thoughts.sh  process-transcript.sh  redact-moderation-ip.py  resonance.py  retention-sweep.sh  self-schedule.py  send-letter.py  telegram_send.py  wake.sh  web_read.py  web_search.py
src/: __init__.py  main.py  runner.py  sessions.py
src/api/: __init__.py  __main__.py  app.py  config.py  lifecycle.py  logging.py
src/api/content/: __init__.py  loader.py  paths.py  schemas.py  walker.py
src/api/content/repositories/: __init__.py  about.py  analytics.py  bookshelf.py  dreams.py  essays.py  essays_description.py  landing.py  landing_summary.py  letters.py  letters_description.py  scores.py  scores_description.py  sessions.py  thoughts.py  titles.py  visitor_greeting.py
src/api/events/: __init__.py  bus.py  hub.py  normalizer.py  types.py  watcher.py
src/api/middleware/: auth.py  cors.py  logging.py
src/api/routes/: admin.py  analytics.py  content.py  echoes.py  events.py  health.py  mailbox.py  messages.py  moderation.py  search.py  session.py  titles.py  visitors.py
src/api/search/: __init__.py  index.py  schemas.py  subscriber.py
src/api/services/: attachments.py  chat_history.py  image_optimizer.py  moderator.py  telegram.py  telegram_bot.py
src/memory/: __init__.py  chunker.py  config.py  indexer.py  resonance_engine.py  searcher.py
src/orchestrator/: __init__.py  cli.py  config.py  context.py  interactive.py  lock.py  log.py  pipeline.py  render.py  session.py  telegram_talk.py
src/orchestrator/hooks/: __init__.py  compile_memory.py  conversation.py  drift.py  echoes.py  git.py  graph_update.py  memory_index.py  mirror.py  mood.py  resonance.py  snapshot.py  thoughts.py  transcript.py  visitors_archive.py
src/orchestrator/prompts/: _reminder.md.j2  _reminder_self.md.j2  compile_memory_prompt.md  system.md.j2  user_correspondence.md.j2  user_custom.md.j2  user_scheduled.md.j2  user_self.md.j2  user_telegram.md.j2  user_telegram_talk.md.j2  user_visit.md.j2
tests/: __init__.py  conftest.py  test_health.py  test_moderation.py  test_redact_moderation_ip.py  test_retention_sweep.py
tools/: protocol-zero.sh
