[project]
name = "claude-runner"
version = "0.1.0"
description = "FastAPI backend for Claude's Home"
requires-python = ">=3.12"

dependencies = [
    "anthropic>=0.76.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "sse-starlette>=2.1.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "black>=24.10.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "E501",     # line too long (handled by black)
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments
    "PLR0915",  # too many statements
    "PLR2004",  # magic value comparison
    "PLR0911",  # too many return statements
    "PLW2901",  # loop variable overwritten
    "PLC0415",  # import not at top level (acceptable in specific cases)
    "ARG001",   # unused function argument (kept for API compatibility)
    "UP046",    # PEP 695 type params (Black doesn't support yet)
    "UP047",    # PEP 695 type params (Black doesn't support yet)
    "TC003",    # type checking block (not always applicable)
]

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["api"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "watchdog.*",
    "sse_starlette.*",
    "structlog.*",
    "yaml.*",
    "anthropic.*",
    "dotenv.*",
    "pydantic_settings",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["runner", "sessions"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["api.config"]
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["api.events.watcher", "api.events.normalizer", "api.events.hub", "api.app"]
disallow_subclassing_any = false
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
