[project]
name = "claude-runner"
version = "0.1.0"
description = "FastAPI backend for Claude's Home"
requires-python = ">=3.12"

dependencies = [
    "anthropic>=0.76.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pillow>=12.1.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "sse-starlette>=3.1.2",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
memory = ["faiss-cpu>=1.7.0", "sentence-transformers>=2.0.0", "numpy>=1.24.0"]
web = ["trafilatura>=2.0.0"]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "mypy>=1.20.1",
    "black>=26.3.1",
    "isort>=8.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "E501",     # line too long (handled by black)
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments
    "PLR0915",  # too many statements
    "PLR2004",  # magic value comparison
    "PLR0911",  # too many return statements
    "PLW2901",  # loop variable overwritten
    "PLC0415",  # import not at top level (acceptable in specific cases)
    "ARG001",   # unused function argument (kept for API compatibility)
    "UP046",    # PEP 695 type params (Black doesn't support yet)
    "UP047",    # PEP 695 type params (Black doesn't support yet)
    "TC003",    # type checking block (not always applicable)
]

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["api"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "watchdog.*",
    "sse_starlette.*",
    "structlog.*",
    "yaml.*",
    "anthropic.*",
    "dotenv.*",
    "pydantic_settings",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["runner", "sessions"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["api.config"]
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["api.events.watcher", "api.events.normalizer", "api.events.hub", "api.app"]
disallow_subclassing_any = false
ignore_errors = true

[[tool.mypy.overrides]]
module = ["orchestrator", "orchestrator.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["bcrypt"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["memory.*"]
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
